cabal-version:       >=1.10
name:                noteTree
version:             0.1.0.0
build-type:          Simple

executable noteTree
  main-is:             Main.hs
  hs-source-dirs:      app
  default-language:    Haskell2010
  build-depends:       
    base >=4.7 && <5,
    threepenny-gui,
    cmark,
    text,
    directory,
    filepath
